fix(datatable): reset border-collapse (#70)

--- a/packages/mikado_reborn/src/components/DataTable/DataTable.scss
+++ b/packages/mikado_reborn/src/components/DataTable/DataTable.scss
@@ -1,10 +1,11 @@
 @import '../../assets/styles/styles.scss';
 
 .mkr__data-table {
-  border-spacing: 0;
-  border: 1px solid map-get($colors, "neutral-20");;
-  border-radius: 4px;
   background-color: map-get($colors, "white");
+  border: 1px solid map-get($colors, "neutral-20");;
+  border-collapse: initial;
+  border-radius: 4px;
+  border-spacing: 0;
   color: map-get($colors, "neutral");
   text-align: left;
 
